[gd_scene load_steps=2 format=3 uid="uid://4k0bxii3c71l"]

[ext_resource type="Script" path="res://UI/game_over_screen.gd" id="1_8oxpm"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8oxpm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.695503, 0.695503, 0.695503, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -30.0
offset_right = 2.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 115.0
offset_top = 35.0
offset_right = 191.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Restart
"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 35.0
offset_right = 102.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
